syntax = "proto2";

option java_package = "com.soleilcode.onepicaday";

import "photos.proto";

// Configuration that's necessary for the app to run.
message AppConfig {
    // Summary of a project.
    // Contains enough information to render a project in the list of projects.
    message ProjectSummary {
        optional string id = 1;
        optional string name = 2;
    }

    // The list of projects.
    repeated ProjectSummary projects = 1;
}