syntax = "proto2";

option java_package = "com.soleilcode.onepicaday";

message Photo {
  // Unix timestamp of the photo creation.
  optional int64 creation_time_millis = 1;

  // Height in pixels.
  optional int32 height = 2;

  // Width in pixels..
  optional int32 width = 3;

  // The bytes encoding the image, as JPEG.
  optional bytes bitmap = 4;
}